--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -9,49 +9,12 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<!-- 
-<ion-content [fullscreen]="true">
-  <ion-card class="main-card">
-    <ion-card-content>
-      <ion-card-title id="typing-title">Welcome To ITProcurement</ion-card-title>
-      <p>
-        ITProcurement is a web application that allows you to manage your IT
-        procurement process.
-      </p>
-    </ion-card-content>
-  </ion-card>
-
-
-  <div class="row">
-    <div class="triangle-container">
-      <ion-card class="triangle-card card1" routerLink="/procurement">
-        <ion-card-header>
-          <ion-card-title>End user Pc Procurement</ion-card-title>
-          <ion-card-subtitle>To Create Request of Items</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-      <ion-card class="triangle-card card2">
-        <ion-card-header>
-          <ion-card-title>DS-IN</ion-card-title>
-          <ion-card-subtitle>Procurement Aprovers</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-      <ion-card class="triangle-card card3">
-        <ion-card-header>
-          <ion-card-title>Customer Project IT Requirements</ion-card-title>
-          <ion-card-subtitle>Customer Requirement Gathering</ion-card-subtitle>
-        </ion-card-header>
-      </ion-card>
-    </div>
-  </div>
-</ion-content> -->
-
 
 <ion-content [fullscreen]="true">
   <ion-card class="main-card">
     <ion-card-header class="ion-text-center">
       <ion-card-title class="Cardtitle">Welcome To IT Procurement Portal</ion-card-title>
-      <p>ITProcurement is a web application that allows you to manage your IT procurement process.</p>
+      <ion-card-subtitle class="Cardsubtitle">ITProcurement is a web application that allows you to manage your IT procurement process.</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
@@ -59,18 +22,17 @@
         <div class="triangle-container">
           <ion-card class="triangle-card card1" routerLink="/procurement">
             <ion-card-header>
-              <ion-card-title>End user Pc Procurement</ion-card-title>
-              <ion-card-subtitle>To Create Request of Items</ion-card-subtitle>
+              <ion-card-title>End User Pc Procurement</ion-card-title>
+              <ion-card-subtitle>To Create Procurement Request of Items</ion-card-subtitle>
             </ion-card-header>
           </ion-card>
           <ion-card class="triangle-card card2">
             <ion-card-header>
               <ion-card-title>DS-IN</ion-card-title>
-              <ion-card-subtitle>Network/Data Center</ion-card-subtitle>
-              <ion-card-subtitle>License Related Procurement</ion-card-subtitle>
+              <ion-card-subtitle>Network/Data Center License Related Procurement</ion-card-subtitle>
             </ion-card-header>
           </ion-card>
-          <ion-card class="triangle-card card3">
+          <ion-card class="triangle-card card3" routerLink="/">
             <ion-card-header>
               <ion-card-title>Customer Project IT Requirements</ion-card-title>
               <ion-card-subtitle>Customer Requirement Gathering</ion-card-subtitle>
@@ -81,4 +43,3 @@
     </ion-card-content>
   </ion-card>
 </ion-content>
-
