--- a/src/app/pages/approvallist/approvallist.page.scss
+++ b/src/app/pages/approvallist/approvallist.page.scss
@@ -1,108 +1,105 @@
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 0;
-    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-  
+  width: 100%;
+  border-collapse: collapse;
+  margin: 0;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
+
+}
+
+table tr {
+  border-bottom: 1px solid #ddd;
+  padding: .45em;
+
+
+}
+
+table th {
+  text-align: center;
+  padding: .625em;
+  font-size: .85em;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+  background-color: #428bca !important;
+  color: #000;
+}
+
+tbody tr:nth-child(even) {
+  background-color: #f5f5f5;
+}
+
+table th,
+table td {
+  padding: .625em;
+  text-align: center;
+}
+
+// @media screen and (max-width: 800px) {
+@media (max-width:768px) {
+  table {
+    border: 2px solid #ccc;
   }
-  
-  table tr {
-    border-bottom: 1px solid #ddd;
-    padding: .45em;
-  
-  
+
+  table thead tr {
+    display: none;
   }
-  
-  table th {
-    text-align: center;
-    padding: .625em;
-    font-size: .85em;
-    letter-spacing: .1em;
-    text-transform: uppercase;
-    background-color: #84a9b2;
-    color: #000;
-  }
-  
-  tbody tr:nth-child(even) {
-    background-color: #f5f5f5;
-  }
-  
+
+  // table tr {
+  //   margin-bottom: 1em;
+  //   display: block;
+  //   border-bottom: 2px solid #ddd;
+  // }
+
   table th,
   table td {
-    padding: .625em;
-    text-align: center;
+    padding: .5em;
   }
-  
-  // @media screen and (max-width: 800px) {
-  @media (max-width:768px) {
-    table {
-      border: 2px solid #ccc;
-    }
-  
-    table thead tr {
-      display: none;
-    }
-  
-    // table tr {
-    //   margin-bottom: 1em;
-    //   display: block;
-    //   border-bottom: 2px solid #ddd;
-    // }
-  
-    table th,
-    table td {
-      padding: .5em;
-    }
-  
-    tbody tr:nth-child(even) {
-      background-color: #c9ebfd;
-    }
-  
-    table td {
-      text-align: right;
-      display: block;
-      font-size: 1em;
-      border-bottom: 1px dotted #ccc;
-    }
-  
-    table td:before {
-      content: attr(data-title) ":";
-      float: left;
-      font-weight: bold;
-    }
-  
-    table td:last-child {
-      border-bottom: 0;
-    }
+
+  tbody tr:nth-child(even) {
+    background-color: #c9ebfd;
   }
-  // Modal Css
-  .modal-table {
-    ion-row {
-      ion-col {
-        padding: 10px;
-        border-bottom: 1px solid #e0e0e0;
-        display: flex;
-        align-items: center;
-  
-        &:first-child {
-          background-color: #f5f5f5;
-          font-weight: bold;
-        }
-  
-        h2, p {
-          margin: 0;
-        }
+
+  table td {
+    text-align: right;
+    display: block;
+    font-size: 1em;
+    border-bottom: 1px dotted #ccc;
+  }
+
+  table td:before {
+    content: attr(data-title) ":";
+    float: left;
+    font-weight: bold;
+  }
+
+  table td:last-child {
+    border-bottom: 0;
+  }
+}
+
+// Modal Css
+.modal-table {
+  ion-row {
+    ion-col {
+      padding: 10px;
+      border-bottom: 1px solid #e0e0e0;
+      display: flex;
+      align-items: center;
+
+      &:first-child {
+        background-color: #f5f5f5;
+        font-weight: bold;
+      }
+
+      h2,
+      p {
+        margin: 0;
       }
     }
-  
-    ion-card-header{
-      background-color: #83b4c8;
-      font-weight: bold;
-    }
-  
   }
-  
-  
-  
-  
-  
+
+  ion-card-header {
+    background-color: #83b4c8;
+    font-weight: bold;
+  }
+
+}
