--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,52 +1,63 @@
+<!-- <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet"> -->
 
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
-
-<ion-header class="ion-no-border">
+<!-- <ion-header class="ion-no-border">
   <ion-toolbar>
     <div class="back-circle"></div>
     <ion-title class="ion-text-center custom-font">Sign In</ion-title>
-    <!-- <ion-buttons slot="start">
-      <ion-menu-button menu="main-menu"> </ion-menu-button>
-    </ion-buttons> -->
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content fullscreen="true">
-
+<!-- <ion-content fullscreen="true">
   <svg class="back-blob" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg">
     <path fill="#8295A3"
       d="M68.6,-33.5C81.6,-17.2,79.6,13.8,65.7,37.6C51.8,61.3,25.9,77.8,2.1,76.6C-21.7,75.4,-43.5,56.5,-54.2,34.6C-65,12.7,-64.8,-12.3,-53.9,-27.4C-43,-42.4,-21.5,-47.6,3.2,-49.4C27.9,-51.2,55.7,-49.7,68.6,-33.5Z"
       transform="translate(100 100)" />
   </svg>
-
   <div class="ion-padding">
-
     <form class="ion-padding" (ngSubmit)="login()">
-
       <div class="wrap-input">
         <input class="input" type="text" [(ngModel)]="username" name="username" required placeholder="Username">
       </div>
-
       <div class="wrap-input">
         <input class="input" type="password" [(ngModel)]="password" name="password" name="password"
           placeholder="Password">
       </div>
-
       <div class="container-form-btn">
         <button class="form-btn custom-font">
           Submit
         </button>
       </div>
-
-
     </form>
-
   </div>
+</ion-content> -->
 
+<ion-content>
+  <section>
+    <div class="box">
+      <div class="square" style="--i:0;"></div>
+      <div class="square" style="--i:1;"></div>
+      <div class="square" style="--i:2;"></div>
+      <div class="square" style="--i:3;"></div>
+      <div class="square" style="--i:4;"></div>
+      <div class="square" style="--i:5;"></div>
+      <div class="container">
+        <div class="form">
+          <h2>Login To IT Procurement</h2>
+          <form (ngSubmit)="login()">
+            <div class="inputBx">
+              <input type="text" [(ngModel)]="username" name="username" required="required"><span>User Name</span><i
+                class="fas fa-user-circle"></i>
+            </div>
+            <div class="inputBx password">
+              <input id="password-input" type="password" [(ngModel)]="password" name="password"
+                required="required"><span>Password</span><i class="fas fa-key"></i>
+            </div>
+            <div class="inputBx">
+              <button class="form-btn custom-font" type="submit">LogIn</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </section>
 </ion-content>
-
-<ion-footer class="ion-no-border">
-  <ion-toolbar>
-    <p class="ion-text-center custom-font">Already have an account? <a href="">Sign In</a></p>
-  </ion-toolbar>
-</ion-footer>
