--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -1,127 +1,372 @@
-.custom-font {
-    font-family: 'Josefin Sans', sans-serif;
-  }
-  
-  ion-toolbar {
-    --background: transparent;
-  
-    ion-title {
-      padding: 20px 0 46px 0;
-      font-weight: 900;
-    }
-  
-    p {
-      padding: 40px 0 20px 0;
-      font-weight: 600;
-    }
-  
-    .back-circle {
-      z-index: -1;
-      width: 200px;
-      height: 200px;
-      background: #e5ecf1;
-      position: absolute;
-      border-radius: 50%;
-      margin-left: auto;
-      margin-right: auto;
-      left: 0;
-      right: 0;
-      bottom: 0;
-  
-    }
-  
-  
-  }
-  
-  ion-content {
-  
-    --background: rgba(237, 242, 245, .8);
-  
-    .back-blob {
-      z-index: -1;
-      width: 600px;
-      position: absolute;
-      left: -50%;
-      top: 0;
-    }
-  
-    form {
-      margin-top: 100px;
-    }
-  
-    .wrap-input {
-      background-color: rgba(255, 255, 255, .8);
-      border-radius: 20px;
-      margin-bottom: 26px;
-      box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.12);
-    }
-  
-    .input {
-      display: block;
-      width: 100%;
-      background: transparent;
-      font-family: Josefin Sans;
-      font-size: 16px;
-      line-height: 1.2;
-      border: none;
-      outline: none;
-      height: 46px;
-      padding: 0 20px 0 23px; 
-    }
-  
-    .container-form-btn {
-      display: flex;
-      justify-content: center;
-    }
-  
-    .form-btn {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0 20px;
-      min-width: 160px;
-      height: 42px;
-      background-color: #394752;
-      border-radius: 20px;
-      font-size: 14px;
-      color: #FFFFFF;
-      text-transform: uppercase;
-      padding-top: 5px;
-      transition: all 0.4s;
-      box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.5);
-    }
-  
-    .form-btn:hover {
-      background-color: #28333b;
-      box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.8);
-    }
-  
-  
-  }
-  
+// .custom-font {
+//     font-family: 'Josefin Sans', sans-serif;
+//   }
 
-  .ion-padding{
-    margin-top: 100px;
-  }
+//   ion-toolbar {
+//     --background: transparent;
+
+//     ion-title {
+//       padding: 20px 0 46px 0;
+//       font-weight: 900;
+//     }
+
+//     p {
+//       padding: 40px 0 20px 0;
+//       font-weight: 600;
+//     }
+
+//     .back-circle {
+//       z-index: -1;
+//       width: 200px;
+//       height: 200px;
+//       background: #e5ecf1;
+//       position: absolute;
+//       border-radius: 50%;
+//       margin-left: auto;
+//       margin-right: auto;
+//       left: 0;
+//       right: 0;
+//       bottom: 0;
+
+//     }
 
 
-  // custom css 
-  ion-content[_ngcontent-ng-c123910787] .back-blob[_ngcontent-ng-c123910787] {
-    z-index: -1;
-    width: 664px;
-    position: absolute;
-    left: -50%;
-    top: 0;
+//   }
+
+//   ion-content {
+
+//     --background: rgba(237, 242, 245, .8);
+
+//     .back-blob {
+//       z-index: -1;
+//       width: 600px;
+//       position: absolute;
+//       left: -50%;
+//       top: 0;
+//     }
+
+//     form {
+//       margin-top: 100px;
+//     }
+
+//     .wrap-input {
+//       background-color: rgba(255, 255, 255, .8);
+//       border-radius: 20px;
+//       margin-bottom: 26px;
+//       box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.12);
+//     }
+
+//     .input {
+//       display: block;
+//       width: 100%;
+//       background: transparent;
+//       font-family: Josefin Sans;
+//       font-size: 16px;
+//       line-height: 1.2;
+//       border: none;
+//       outline: none;
+//       height: 46px;
+//       padding: 0 20px 0 23px; 
+//     }
+
+//     .container-form-btn {
+//       display: flex;
+//       justify-content: center;
+//     }
+
+//     .form-btn {
+//       display: flex;
+//       justify-content: center;
+//       align-items: center;
+//       padding: 0 20px;
+//       min-width: 160px;
+//       height: 42px;
+//       background-color: #394752;
+//       border-radius: 20px;
+//       font-size: 14px;
+//       color: #FFFFFF;
+//       text-transform: uppercase;
+//       padding-top: 5px;
+//       transition: all 0.4s;
+//       box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.5);
+//     }
+
+//     .form-btn:hover {
+//       background-color: #28333b;
+//       box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.8);
+//     }
+
+
+//   }
+
+
+//   .ion-padding{
+//     margin-top: 100px;
+//   }
+
+
+//   // custom css 
+//   ion-content[_ngcontent-ng-c123910787] .back-blob[_ngcontent-ng-c123910787] {
+//     z-index: -1;
+//     width: 664px;
+//     position: absolute;
+//     left: -50%;
+//     top: 0;
+// }
+
+//   ion-input{
+//     --background: rgba(255, 255, 255, .8);
+//     --border-radius: 10px;
+//     --box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.12);
+
+
+//   }
+
+
+
+
+@import url('https://fonts.googleapis.com/css2?family=El+Messiri:wght@700&display=swap');
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  // background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+  background-size: 400% 400%;
+  animation: gradient 10s ease infinite;
+  background: url(../../../assets/visual_001.jpg) no-repeat rgba(255, 255, 255, 0.1);
+  background-color: grey;
+  background-blend-mode: multiply;
+  background-size: cover;
 }
 
-  ion-input{
-    --background: rgba(255, 255, 255, .8);
-    --border-radius: 10px;
-    --box-shadow: 0 10px 30px 0px rgba(57, 71, 82, 0.12);
-   
-    
+
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
   }
 
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
+.box {
+  position: relative;
+
+  .square {
+    position: absolute;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(5px);
+    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
+    border: 1px solid rgba(255, 255, 255, 0.15);
+    border-radius: 15px;
+    animation: square 10s linear infinite;
+    animation-delay: calc(-1s * var(--i));
+  }
+
+  @keyframes square {
+
+    0%,
+    100% {
+      transform: translateY(-20px);
+    }
+
+    50% {
+      transform: translateY(20px);
+    }
+  }
+
+  .square:nth-child(1) {
+    width: 100px;
+    height: 100px;
+    top: -15px;
+    right: -45px;
+    background: hsla(226, 85%, 48%, 0.514);
+  }
+
+  .square:nth-child(2) {
+    width: 150px;
+    height: 150px;
+    top: 105px;
+    left: -125px;
+    z-index: 2;
+  }
+
+  .square:nth-child(3) {
+    width: 60px;
+    height: 60px;
+    bottom: 85px;
+    right: -45px;
+    z-index: 2;
+  }
+
+  .square:nth-child(4) {
+    width: 50px;
+    height: 50px;
+    bottom: 35px;
+    left: -95px;
+  }
+
+  .square:nth-child(5) {
+    width: 50px;
+    height: 50px;
+    top: -15px;
+    left: -25px;
+  }
+
+  .square:nth-child(6) {
+    width: 85px;
+    height: 85px;
+    top: 165px;
+    right: -155px;
+    z-index: 2;
+  }
+}
+
+.container {
+  position: relative;
+  padding: 50px;
+  width: 450px;
+  min-height: 380px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(5px);
+  border-radius: 10px;
+  box-shadow: 0 25px 45px rgba(0, 0, 0, 0.2);
+}
+
+.container::after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  bottom: 5px;
+  left: 5px;
+  border-radius: 5px;
+  pointer-events: none;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.1) 0%, rgba(255, 255, 255, 0.1) 2%);
+}
+
+.form {
+  position: relative;
+  width: 100%;
+  height: 100%;
+
+  h2 {
+    color: #fff;
+    letter-spacing: 2px;
+    margin-bottom: 30px;
+  }
+
+  .inputBx {
+    position: relative;
+    width: 100%;
+    margin-bottom: 20px;
+
+    input {
+      width: 80%;
+      outline: none;
+      border: none;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      background: rgba(255, 255, 255, 0.2);
+      padding: 8px 10px;
+      padding-left: 40px;
+      border-radius: 15px;
+      color: #fff;
+      font-size: 16px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
+    }
+
+    .password-control {
+      position: absolute;
+      top: 11px;
+      right: 10px;
+      display: inline-block;
+      width: 20px;
+      height: 20px;
+      background: url(https://snipp.ru/demo/495/view.svg) 0 0 no-repeat;
+      transition: 0.5s;
+    }
+
+    .view {
+      background: url(https://snipp.ru/demo/495/no-view.svg) 0 0 no-repeat;
+      transition: 0.5s;
+    }
+
+    .fas {
+      position: absolute;
+      top: 13px;
+      left: 13px;
+    }
+
+    button[type="submit"] {
+      background: #008CBA;
+      color: #fff;
+      max-width: 100px;
+      padding: 8px 10px;
+      box-shadow: none;
+      letter-spacing: 1px;
+      cursor: pointer;
+      transition: 1.5s;
+      border-radius: 10px;
+    }
+
+    button[type="submit"]:hover {
+      background: #fff;
+      color: #111;
+      transition: .5s;
+    }
+
+    input::placeholder {
+      color: #fff;
+    }
+
+    span {
+      position: absolute;
+      left: 30px;
+      padding: 10px;
+      display: inline-block;
+      color: #fff;
+      transition: .5s;
+      pointer-events: none;
+    }
+
+    input:focus~span,
+    input:valid~span {
+      transform: translateX(-30px) translateY(-25px);
+      font-size: 12px;
+    }
+  }
+
+  p {
+    color: #fff;
+    font-size: 15px;
+    margin-top: 5px;
+
+    a {
+      color: #fff;
+    }
+
+    a:hover {
+      background-color: #000;
+      background-image: linear-gradient(to right, #434343 0%, black 100%);
+      -webkit-text-fill-color: transparent;
+    }
+  }
+}
 
 
-
+@media (max-width: 768px) {
+  .container {
+    width: 300px;
+  }
+}
