--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -4,17 +4,25 @@
       <div class="panel-body">
         <div class="form-row">
           <div class="form-group col-md-4" [ngClass]="{'invalid': formSubmitted && myForm.get('name')?.invalid}">
+            <label class="form-label required" for="name">RequestType<span>*</span></label>
+            <input type="text" class="form-control" id="name" formControlName="name" placeholder="Name" required />
+          </div>
+          <div class="form-group col-md-4" [ngClass]="{'invalid': formSubmitted && myForm.get('name')?.invalid}">
             <label class="form-label required" for="name">Name<span>*</span></label>
             <input type="text" class="form-control" id="name" formControlName="name" placeholder="Name" required />
           </div>
           <div class="form-group col-md-4" [ngClass]="{'invalid': formSubmitted && myForm.get('department')?.invalid}">
             <label class="form-label required" for="department">Department<span>*</span></label>
             <select class="form-control" formControlName="department">
-              <option *ngFor="let option of departmentDropdown" [value]="option.DepartmentName">{{
-                option.DepartmentName}}</option>
+              <option *ngFor="let option of departmentDropdown" [value]="option.DepartmentName">
+                {{option.DepartmentName}}</option>
             </select>
           </div>
-          <div class="form-group col-md-4"
+          <div class="form-group col-md-6">
+            <label for="remarks">Remarks</label>
+            <textarea class="form-control" formControlName="remarks" rows="1"></textarea>
+          </div>
+          <div class="form-group col-md-6"
             [ngClass]="{'invalid': formSubmitted && myForm.get('isExpenditure')?.invalid}">
             <label class="form-label required" for="isExpenditure">Is Expenditure Budgted<span>*</span></label>
             <select class="form-control" formControlName="isExpenditure" required>
@@ -35,18 +43,29 @@
                 placeholder="Utilized Budget" />
             </div>
           </div>
-          <div class="form-group col-md-6">
-            <label for="remarks">Remarks</label>
-            <textarea class="form-control" formControlName="remarks" rows="1"></textarea>
-          </div>
+
+
+
           <div class="form-group col-md-6">
             <label for="attachment">Attachment</label>
-            <ion-button id="open-modal" expand="block">Open</ion-button>
+            <input type="file" class="form-control" formControlName="attachment" (change)="handleFileInput($event)" multiple />
 
-            
-            
-            
+            <div class="input-group-append">
+              <button class="btn btn-outline-secondary" type="button" >
+                <i class="fa fa-eye"></i>
+              </button>
+            </div>
+            <div *ngIf="fileList.length > 0">
+              <h5>Uploaded Files:</h5>
+              <ul>
+                <li *ngFor="let file of fileList">{{ file.name }}</li>
+              </ul>
+            </div>
           </div>
+
+
+
+
           <div class="inline-table">
             <table class="table table-bordered">
               <thead class="thead-dark">
