--- a/src/app/component/newhireform/newhireform.component.scss
+++ b/src/app/component/newhireform/newhireform.component.scss
@@ -78,3 +78,18 @@ form {
   margin-bottom: 0;
   background: #428bca;
 }
+
+
+
+
+input[type=file] {
+  display: block;
+  margin-bottom: 12px;
+}
+
+.additional-attachments .name{
+  font-size: 1.2rem;
+  font-weight: 600;
+  color: #428bca;
+  background: greenyellow;
+}
