multi attachment work part1

--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -3,7 +3,7 @@
     <div class="panel panel-primary">
       <div class="panel-body">
         <div class="form-row">
-          
+
           <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('name')?.invalid}">
             <label class="form-label required" for="name">Name<span>*</span></label>
             <input type="text" class="form-control" id="name" formControlName="name" placeholder="Name" required />
@@ -45,21 +45,20 @@
             </div>
           </div>
           <!-- Start of Additional Attachments -->
-          <div class="form-group col-md-12 additional-attachments">
+          <!-- <div class="form-group col-md-12 additional-attachments">
             <label for="additionalAttachments">Additional Attachments</label>
             <div *ngFor="let attachment of additionalAttachments.controls; let i = index" class="mt-2">
               <div class="row align-items-center">
                 <div class="col-md-6">
-                  <input type="file" class="form-control" formControlName="{{'attachment' + i}}"
-                    (change)="handleFileChange($event, i)">
+                  <ion-input type="file" class="form-control" [formControlName]="i"
+                    (ionChange)="handleFileChange($event.target.files, i)"></ion-input>
                 </div>
                 <div class="col-md-6 delete">
-                  <ion-button expand="block" color="medium" (click)="removeAttachmentField(i)"><ion-icon
-                      name="trash-outline"></ion-icon></ion-button>
+                  <ion-button expand="block" color="medium" (click)="removeAttachmentField(i)" [formControlName]="i"><ion-icon name="trash-outline"></ion-icon></ion-button>
                 </div>
-                <!-- <div class="col-md-3 name">
+                <div class="col-md-3 name">
                   <span>{{ fileNames[i] }}</span>
-                </div> -->
+                </div>
               </div>
             </div>
             <div class="input-group">
@@ -67,65 +66,88 @@
                 <ion-icon name="cloud-upload-outline"></ion-icon>Add More Attachments
               </button>
             </div>
-          </div>
-          <!-- End of Additional Attachments -->
-          <div class="inline-table">
-            <table class="table table-bordered">
-              <thead class="thead-dark">
-                <tr>
-                  <th>Category</th>
-                  <th>Item</th>
-                  <th>Cost Center</th>
-                  <th>Quantity</th>
-                  <th>Action</th>
-                </tr>
-              </thead>
-              <tbody formArrayName="rows">
-                <tr *ngFor="let row of rows.controls; let i = index" [formGroupName]="i"
-                  [ngClass]="{'invalid': formSubmitted && row.invalid}">
-                  <td>
-                    <select formControlName="category" class="form-control"
-                      [ngClass]="{'invalid-inline': formSubmitted && row.get('category')?.invalid}">
-                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">
-                        {{option.ItemCategory}}</option>
-                    </select>
-                  </td>
-                  <td>
-                    <select formControlName="item" class="form-control">
-                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
-                      </option>
-                    </select>
-                  </td>
-                  <td>
-                    <select formControlName="costCenter" class="form-control">
-                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
-                      </option>
-                    </select>
-                  </td>
-                  <td>
-                    <input type="number" formControlName="quantity" class="form-control" value="1" readonly>
-                  </td>
-                  <td>
-                    <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
+          </div> -->
+
+
+          <div class="form-group col-md-12 additional-attachments">
+            <label for="additionalAttachments">Additional Attachments</label>
+            <div formArrayName="additionalAttachments">
+              <div *ngFor="let attachment of additionalAttachments.controls; let i = index" class="mt-2">
+                <div class="row align-items-center">
+                  <div class="col-md-6">
+                    <input type="file" class="form-control" [formControlName]="i"  (change)="handleFileChange($event)">
+                  </div>
+                  <div class="col-md-6 delete">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon1"
+                      (click)="removeAttachmentField(i)" [formControlName]="i">
                       <ion-icon name="trash-outline"></ion-icon>
-                    </ion-button>
-                  </td>
-                </tr>
-              </tbody>
-              <tfoot>
-                <tr>
-                  <td colspan="7">
-                    <ion-button (click)="addRow()" color="success" fill="solid" size="small">
-                      <ion-icon name="add-circle-outline"></ion-icon>
-                    </ion-button>
-                  </td>
-                </tr>
-              </tfoot>
-            </table>
+                    </button>
+                  </div>
+                </div>
+              </div>
+              <div class="input-group">
+                <button class="btn btn-outline-secondary" type="button" id="button-addon1"
+                  (click)="addAttachmentField()">
+                  <ion-icon name="cloud-upload-outline"></ion-icon>Add More Attachments
+                </button>
+              </div>
+            </div>
           </div>
+            <!-- End of Additional Attachments -->
+            <div class="inline-table">
+              <table class="table table-bordered">
+                <thead class="thead-dark">
+                  <tr>
+                    <th>Category</th>
+                    <th>Item</th>
+                    <th>Cost Center</th>
+                    <th>Quantity</th>
+                    <th>Action</th>
+                  </tr>
+                </thead>
+                <tbody formArrayName="rows">
+                  <tr *ngFor="let row of rows.controls; let i = index" [formGroupName]="i" [ngClass]="{'invalid': formSubmitted && row.invalid}">
+                    <td>
+                      <select formControlName="category" class="form-control" [ngClass]="{'invalid-inline': formSubmitted && row.get('category')?.invalid}">
+                        <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory"> {{option.ItemCategory}}</option>
+                      </select>
+                    </td>
+                    <td>
+                      <select formControlName="item" class="form-control">
+                        <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
+                        </option>
+                      </select>
+                    </td>
+                    <td>
+                      <select formControlName="costCenter" class="form-control">
+                        <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
+                        </option>
+                      </select>
+                    </td>
+                    <td>
+                      <input type="number" formControlName="quantity" class="form-control" value="1" readonly>
+                    </td>
+                    <td>
+                      <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
+                        <ion-icon name="trash-outline"></ion-icon>
+                      </ion-button>
+                    </td>
+                  </tr>
+                </tbody>
+                <tfoot>
+                  <tr>
+                    <td colspan="7">
+                      <ion-button (click)="addRow()" color="success" fill="solid" size="small">
+                        <ion-icon name="add-circle-outline"></ion-icon>
+                      </ion-button>
+                    </td>
+                  </tr>
+                </tfoot>
+              </table>
+            </div>
+          </div>
+          <button class="btn btn-info" type="submit">Submit</button>
         </div>
-        <button class="btn btn-info" type="submit">Submit</button>
       </div>
     </div>
-  </div>
 </form>
