--- a/src/app/component/replacementform/replacementform.component.html
+++ b/src/app/component/replacementform/replacementform.component.html
@@ -3,24 +3,35 @@
     <div class="panel panel-primary">
       <div class="panel-body">
         <div class="form-row">
-          <div class="form-group col-md-4" [ngClass]="{'invalid': formSubmitted && myForm.get('name')?.invalid}">
-            <label class="form-label required" for="name">Name</label>
+
+          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('name')?.invalid}">
+            <label class="form-label required" for="name">Name<span>*</span></label>
             <input type="text" class="form-control" id="name" formControlName="name" placeholder="Name" required />
           </div>
-          <div class="form-group col-md-4" [ngClass]="{'invalid': formSubmitted && myForm.get('department')?.invalid}">
-            <label for="department">Department</label>
+
+          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('department')?.invalid}">
+            <label class="form-label required" for="department">Department<span>*</span></label>
             <select class="form-control" formControlName="department">
-              <option *ngFor="let option of departmentDropdown" [value]="option.id">{{ option.DepartmentName }}</option>
+              <option *ngFor="let option of departmentDropdown" [value]="option.DepartmentName">
+                {{option.DepartmentName}}</option>
             </select>
           </div>
-          <div class="form-group col-md-4" [ngClass]="{'invalid': formSubmitted && myForm.get('isExpenditure')?.invalid}">
-            <label for="isExpenditure">Is Expenditure</label>
-            <select class="form-control" formControlName="isExpenditure" name="isExpenditure" required>
+
+          <div class="form-group col-md-6">
+            <label for="remarks">Remarks</label>
+            <textarea class="form-control" formControlName="remarks" rows="1"></textarea>
+          </div>
+
+          <div class="form-group col-md-6"
+            [ngClass]="{'invalid': formSubmitted && myForm.get('isExpenditure')?.invalid}">
+            <label class="form-label required" for="isExpenditure">Is Expenditure Budgted<span>*</span></label>
+            <select class="form-control" formControlName="isExpenditure" required>
               <option value="">Choose...</option>
               <option value="Yes">Yes</option>
               <option value="No">No</option>
             </select>
           </div>
+
           <div *ngIf="myForm.get('isExpenditure')?.value === 'Yes'">
             <div class="form-group col-md-6">
               <label for="totalBudget">Total Budget</label>
@@ -33,70 +44,14 @@
                 placeholder="Utilized Budget" />
             </div>
           </div>
-          div
-          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('attachment')?.invalid}">
-            <label for="attachment">Attachment</label>
-            <input type="file" class="form-control" formControlName="attachment" />
+
+          <!-- Start of Additional Attachments -->
+          <div class="form-group col-md-6">
+            <label for="attachments">Attachments</label>
+            <input type="file" class="form-control" formControlName="fileUpload" name="fileUpload" #fileUpload />
           </div>
-          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('remarks')?.invalid}">
-            <label for="remarks">Remarks</label>
-            <textarea class="form-control" formControlName="remarks" rows="1"></textarea>
-          </div>
-          <div class="inline-table">
-            <table class="table table-bordered">
-              <thead class="text text-primary">
-                <tr>
-                  <th>Name</th>
-                  <th>Category</th>
-                  <th>Item</th>
-                  <th>Quantity</th>
-                  <th>Action</th>
-                </tr>
-              </thead>
-              <tbody formArrayName="rows">
-                <tr *ngFor="let row of rows.controls; let i = index" [formGroupName]="i"
-                  [ngClass]="{'invalid': formSubmitted && row.invalid}">
-                  <td>
-                    <select formControlName="category" class="form-control"
-                      [ngClass]="{'invalid-inline': formSubmitted && row.get('category')?.invalid}">
-                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">
-                        {{option.ItemCategory
-                        }}</option>
-                    </select>
-                  </td>
-                  <td>
-                    <select formControlName="item" class="form-control">
-                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
-                      </option>
-                    </select>
-                  </td>
-                  <td>
-                    <select formControlName="costCenter" class="form-control">
-                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
-                      </option>
-                    </select>
-                  </td>
-                  <td>
-                    <input type="number" formControlName="quantity" class="form-control">
-                  </td>
-                  <td>
-                    <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
-                      <ion-icon name="trash-outline"></ion-icon>
-                    </ion-button>
-                  </td>
-                </tr>
-              </tbody>
-              <tfoot>
-                <tr>
-                  <td colspan="7">
-                    <ion-button (click)="addRow()" color="success" fill="solid" size="small">
-                      <ion-icon name="add-circle-outline"></ion-icon>
-                    </ion-button>
-                  </td>
-                </tr>
-              </tfoot>
-            </table>
-          </div>
+
+          <!-- End of Additional Attachments -->
         </div>
         <button class="btn btn-info" type="submit">Submit</button>
       </div>
