--- a/src/app/component/stockmanagementform/stockmanagementform.component.html
+++ b/src/app/component/stockmanagementform/stockmanagementform.component.html
@@ -1,29 +1,58 @@
-<form class="requires-validation" validate>
+<form [formGroup]="myForm" (ngSubmit)="presentAlert()">
   <div class="panel-group">
     <div class="panel panel-primary">
       <div class="panel-body">
         <div class="form-row">
-          <div class="form-group col-md-6">
-            <label class="form-label required" for="name">Name</label>
-            <input type="text" class="form-control" id="name" [(ngModel)]="name" name="name" placeholder="Name" required/>
+
+          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('name')?.invalid}">
+            <label class="form-label required" for="name">Name<span>*</span></label>
+            <input type="text" class="form-control" id="name" formControlName="name" placeholder="Name" required />
           </div>
-          <div class="form-group col-md-6">
-            <label class="form-label required" for="department">Department</label>
-            <select class="form-control" id="department" [(ngModel)]="department" name="department" required>
-              <option *ngFor="let option of departmentDropdown" [value]="option.id">{{ option.DepartmentName }}</option>
+
+          <div class="form-group col-md-6" [ngClass]="{'invalid': formSubmitted && myForm.get('department')?.invalid}">
+            <label class="form-label required" for="department">Department<span>*</span></label>
+            <select class="form-control" formControlName="department">
+              <option *ngFor="let option of departmentDropdown" [value]="option.DepartmentName">
+                {{option.DepartmentName}}</option>
             </select>
           </div>
+
           <div class="form-group col-md-6">
-            <label for="attachment">Attachment</label>
-            <input type="file" class="form-control" [(ngModel)]="attachment" name="upload" multiple />
+            <label for="remarks">Remarks</label>
+            <textarea class="form-control" formControlName="remarks" rows="1"></textarea>
           </div>
+
+          <div class="form-group col-md-6"
+            [ngClass]="{'invalid': formSubmitted && myForm.get('isExpenditure')?.invalid}">
+            <label class="form-label required" for="isExpenditure">Is Expenditure Budgted<span>*</span></label>
+            <select class="form-control" formControlName="isExpenditure" required>
+              <option value="">Choose...</option>
+              <option value="Yes">Yes</option>
+              <option value="No">No</option>
+            </select>
+          </div>
+
+          <div *ngIf="myForm.get('isExpenditure')?.value === 'Yes'">
+            <div class="form-group col-md-6">
+              <label for="totalBudget">Total Budget</label>
+              <input type="number" class="form-control" formControlName="totalBudget" placeholder="Total Budget" />
+            </div>
+            <div class="form-group col-md-6"
+              [ngClass]="{'invalid': formSubmitted && myForm.get('utilizedBudget')?.invalid}">
+              <label for="utilizedBudget">Utilized Budget</label>
+              <input type="number" class="form-control" formControlName="utilizedBudget"
+                placeholder="Utilized Budget" />
+            </div>
+          </div>
+          <!-- Start of Additional Attachments -->
           <div class="form-group col-md-6">
-            <label class="required" for="remarks">Remarks</label>
-            <textarea class="form-control" [(ngModel)]="remarks" name="remarks" rows="1"></textarea>
+            <label for="attachments">Attachments</label>
+            <input type="file" class="form-control" formControlName="attachments" (change)="OnAttachmnetUpload($event)"/>
           </div>
-          <div class="panel-body">
+          <!-- End of Additional Attachments -->
+          <div class="inline-table">
             <table class="table table-bordered">
-              <thead class="text text-primary">
+              <thead class="thead-dark">
                 <tr>
                   <th>Category</th>
                   <th>Item</th>
@@ -32,25 +61,30 @@
                   <th>Action</th>
                 </tr>
               </thead>
-              <tbody>
-                <tr *ngFor="let row of rows; let i = index">
+              <tbody formArrayName="rows">
+                <tr *ngFor="let row of rows.controls; let i = index" [formGroupName]="i"
+                  [ngClass]="{'invalid': formSubmitted && row.invalid}">
                   <td>
-                    <select [(ngModel)]="rows[i].category" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">{{ option.ItemCategory }}</option>
+                    <select formControlName="category" class="form-control"
+                      [ngClass]="{'invalid-inline': formSubmitted && row.get('category')?.invalid}">
+                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">
+                        {{option.ItemCategory}}</option>
                     </select>
                   </td>
                   <td>
-                    <select [(ngModel)]="rows[i].item" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}</option>
+                    <select formControlName="item" class="form-control">
+                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
+                      </option>
                     </select>
                   </td>
                   <td>
-                    <select [(ngModel)]="rows[i].costCenter" class="form-control" [ngModelOptions]="{standalone: true}">
-                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}</option>
+                    <select formControlName="costCenter" class="form-control">
+                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
+                      </option>
                     </select>
                   </td>
                   <td>
-                    <input type="number" [(ngModel)]="rows[i].quantity" class="form-control" [ngModelOptions]="{standalone: true}">
+                    <input type="number" formControlName="quantity" class="form-control" value="1" readonly>
                   </td>
                   <td>
                     <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
@@ -69,11 +103,10 @@
                 </tr>
               </tfoot>
             </table>
-            <button class="btn btn-info" (click)="submit()">Submit</button>
           </div>
         </div>
+        <button class="btn btn-info" type="submit">Submit</button>
       </div>
     </div>
   </div>
 </form>
-
