--- a/src/app/component/stockmanagementform/stockmanagementform.component.html
+++ b/src/app/component/stockmanagementform/stockmanagementform.component.html
@@ -45,10 +45,25 @@
             </div>
           </div>
           <!-- Start of Additional Attachments -->
-          <div class="form-group col-md-6">
+          <!-- <div class="form-group col-md-6">
             <label for="attachments">Attachments</label>
-            <input type="file" class="form-control" formControlName="attachments" (change)="OnAttachmnetUpload($event)"/>
+            <input type="file" class="form-control" formControlName="attachments" (change)="onAttachmentUpload($event)"
+              multiple />
+          </div> -->
+          
+          <!-- Add more file fields -->
+          <div *ngFor="let fileControl of myForm.get('attachments')?.value; let i = index" class="form-group col-md-6">
+            <label for="attachment{{ i }}">Attachment {{ i + 1 }}</label>
+            <input type="file" class="form-control" [formControlName]="'attachment' + i" [id]="'attachment' + i"
+              (change)="onAttachmentUpload($event, i)" />
           </div>
+          
+          <!-- Add more file fields button -->
+          <ion-button (click)="addMoreAttachments()" color="primary" fill="solid" size="small">
+            Add More Attachments
+          </ion-button>
+
+          
           <!-- End of Additional Attachments -->
           <div class="inline-table">
             <table class="table table-bordered">
