--- a/src/app/pages/procurementview/procurementview.page.html
+++ b/src/app/pages/procurementview/procurementview.page.html
@@ -13,7 +13,7 @@
 <ion-content fullscreen="true">
   <ion-card>
     <ion-card-header>
-      <ion-searchbar placeholder="Filter"></ion-searchbar>
+      <ion-searchbar  placeholder="Filter"></ion-searchbar>
     </ion-card-header>
     <ion-card-content>
         <div class="row">
@@ -25,7 +25,7 @@
                   <th scope="col">Request No</th>
                   <th scope="col">Request Type</th>
                   <th scope="col">Name</th>
-                  <th scope="col">Staus</th>
+                  <th scope="col">Status</th>
                   <th scope="col">Action</th>
                 </tr>
               </thead>
